--- a/app/styles/common/footer.sass
+++ b/app/styles/common/footer.sass
@@ -21,3 +21,8 @@
         .link-wrap
             display: flex
             gap: gem(30)
+
+@media all and (max-width: 1024px)
+    .footer
+        .container
+            width: gem(640)
