--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -94,6 +94,7 @@
 @media all and (max-width: 1024px)
     .header
         &-container
+            width: gem(768)
             padding: gem(40) gem(64) 0 gem(64)
-        &-content
-            width: gem(640)
+            .header-content
+                width: gem(640)
