--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -1,94 +1,10 @@
 @import 'base.sass'
-.hero
-    position: relative
-    .play-btn-wrap
-        position: absolute
-        bottom: gem(170)
-        left: gem(102)
-    .play-btn
-        height: gem(40)
-        display: flex
-        position: relative
-        background-color: transparent
-        border: none
-        align-items: center
-        &:hover
-            .circle
-                width: gem(210)
-                height: gem(40)
-                border-radius: gem(20)
-                transition: width 0.5s
-        .circle
-            position: absolute
-            width: gem(40)
-            height: gem(40)
-            border-radius: gem(20)
-            border: gem(1) solid var(--color-main-accent)
-            left: gem(-13)
-            transition: width 0.5s
-        .triangle
-            margin-right: gem(28)
-        .desc-1
-            font-size: gem(14)
-            line-height: gem(16.21)
-            color: #E72E9D
-            text-transform: uppercase
-            span
-                margin-left: gem(5)
-    .cub
-        position: absolute
-        top: gem(70)
-        right: 0
-        img
-            display: block
-            width: 100%
-            height: 100%
-    .container
-        padding: gem(220) gem(810) gem(376) gem(180)
-        .content-wrap
-            width: gem(450)
-            .text
-                margin-top: gem(20)
-                margin-bottom: gem(33)
-        .aside-wrap
-            display: flex
-            .aside-left
-                margin-right: gem(10)
-
-.group,
-.solution
-    margin-bottom: gem(148)
-    .container
-        padding: 0 gem(180)
-        display: flex
-        justify-content: space-between
-    .content-wrap-list
-        .list
-            display: flex
-            flex-wrap: wrap
-            width: gem(510)
-            gap: gem(50) gem(30)
-        .item
-            width: gem(240)
-            &-icon
-                width: gem(40)
-                height: gem(40)
-                margin-bottom: gem(20)
-                img
-                    display: block
-            &-title
-                margin-bottom: gem(10)
-
-    .content-wrap-call
-        .content-wrap
-            width: gem(450)
-            margin-top: gem(100)
-            .description
-                margin-top: gem(20)
-            .button-wrap
-                display: flex
-                gap: gem(10)
-                margin-top: gem(33)
+@import 'sections/home/hero-section.sass'
+@import 'sections/common/list-section.sass'
+@import 'sections/home/solution.sass'
+@import 'sections/home/group.sass'
+@import 'sections/home/community.sass'
+@import 'sections/home/subscribe-section.sass'
 
 .section-wrap
     position: relative
@@ -100,113 +16,3 @@
             display: block
             width: 100%
             height: 100%
-
-.solution
-    margin-bottom: 0
-    .container
-        padding: gem(159) gem(210) 0 gem(180)
-        .content-wrap-list
-            order: 2
-            .list
-                width: gem(520)
-                gap: gem(46) gem(40)
-            .item
-                &-icon
-                    width: gem(43)
-        .content-wrap-call
-            order: 1
-            .content-wrap
-                margin-top: gem(90)
-
-.community
-    padding-bottom: gem(270)
-    .container
-        display: flex
-        flex-direction: column
-        align-items: center
-        .visual
-            width: gem(854)
-            margin-top: gem(70)
-
-            img
-                display: block
-                width: 100%
-                height: 100%
-    .content-wrap-call
-        width: gem(470)
-        margin-top: gem(51)
-        .content-wrap
-            display: flex
-            flex-direction: column
-            align-items: center
-            .title
-                &-h1
-
-            .description
-                margin-top: gem(20)
-                text-align: center
-            .button-wrap
-                display: flex
-                gap: gem(10)
-                margin-top: gem(33)
-.subscribe-section
-    padding-top: gem(152)
-    padding-bottom: gem(150)
-    .container
-        width: gem(540)
-        display: flex
-        flex-direction: column
-        align-items: center
-        gap: gem(30)
-        .title-wrap
-            text-align: center
-        .input-wrap
-            .input
-                position: relative
-                display: flex
-                .input-email
-                    width: gem(360)
-                    font-size: gem(16)
-                    line-height: gem(50)
-                    padding: 0
-                    padding-left: gem(20)
-                    padding-right: gem(38)
-                    color: var(--color-main-dark)
-                    border: gem(1) solid var(--color-main-dark-opacity50)
-                    background-color: transparent
-                    transition: border 0.5s
-                    &::placeholder
-                        opacity: 0.5
-                        font-size: gem(16)
-                        line-height: gem(50)
-                        letter-spacing: -0.7px
-                        color: var(--color-main-dark-opacity80)
-                    &:focus
-                        outline: none
-                        border-color: var(--color-main-dark)
-            .icon
-                width: gem(14)
-                height: gem(12)
-                position: absolute
-                right: gem(19)
-                top: gem(19)
-                svg
-                    display: block
-                    width: 100%
-                    height: 100%
-
-@media all and (max-width: 1024px)
-    .hero
-        .container
-            padding: gem(200) gem(254) gem(346) gem(64)
-            .content-wrap
-                .title-wrap
-                    .title-h1
-                        font-size: gem(36)
-        .cub
-            width: gem(384)
-            height: gem(445)
-            top: gem(474)
-        .play-btn-wrap
-            bottom: gem(158)
-            left: gem(64)
