--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -98,3 +98,7 @@
             padding: gem(40) gem(64) 0 gem(64)
             .header-content
                 width: gem(640)
+                .header-nav
+                    display: none
+                .header-sub-menu
+                    display: none
