--- a/app/styles/sections/home/hero-section.sass
+++ b/app/styles/sections/home/hero-section.sass
@@ -62,6 +62,9 @@
                 .title-wrap
                     .title-h1
                         font-size: gem(36)
+            .aside-wrap
+                .aside-left
+                    margin-right: gem(20)
         .cub
             width: gem(384)
             height: gem(445)
