--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -4,7 +4,7 @@
 
 <main id="main" data-page-id="home">
     @require('./sections/hero.ejs')
-    <!-- @require('./sections/group.ejs')
+    @require('./sections/group.ejs')
     <div class="section-wrap">
         <div class="background">
             <img src="/assets/img/bg_section.svg" alt="bg_section">
@@ -12,7 +12,7 @@
         @require('./sections/solution.ejs')
         @require('./sections/community.ejs')
     </div>
-    @require('./sections/subscribe-section.ejs') -->
+    @require('./sections/subscribe-section.ejs')
 </main>
 
 @require('./common/footer.ejs')
