--- a/app/styles/sections/home/hero-section.sass
+++ b/app/styles/sections/home/hero-section.sass
@@ -70,5 +70,15 @@
             height: gem(445)
             top: gem(474)
         .play-btn-wrap
-            bottom: gem(158)
-            left: gem(64)
+            bottom: gem(156)
+            left: gem(70)
+            .play-btn
+                .triangle
+                    margin-right: gem(23)
+                .desc-1
+                    font-size: gem(12)
+                    line-height: gem(13.9)
+                .circle
+                    width: gem(30)
+                    height: gem(30)
+                    left: gem(-6.5)
