--- a/app/styles/sections/common/list-section.sass
+++ b/app/styles/sections/common/list-section.sass
@@ -41,7 +41,7 @@
             padding: 0
             .content-wrap-list
                 order: 2
-                margin-top: gem(100)
+                margin-top: gem(105)
                 .list
                     gap: gem(60) gem(80)
                     padding-left: gem(128)
@@ -51,8 +51,10 @@
                         &-icon
                             position: absolute
                             left: gem(-65)
-                            top: gem(-2)
+                            top: gem(-7)
                             margin: 0
+                        &-description
+                            width: gem(228)
             .content-wrap-call
                 order: 1
                 .content-wrap
