--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -7,7 +7,9 @@
     @require('./sections/group.ejs')
     <div class="section-wrap">
         <div class="background">
-            <img src="/assets/img/bg_section.svg" alt="bg_section">
+            <img src="/assets/img/bg_section.svg" class="bg-desktop" alt="bg_section">
+            <img src="/assets/img/bg_section-tablet.svg" class="bg-tablet" alt="bg_section">
+            <img src="/assets/img/bg_section-mobile.svg" class="bg-mobile" alt="bg_section">
         </div>
         @require('./sections/solution.ejs')
         @require('./sections/community.ejs')
