--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -16,3 +16,23 @@
             display: block
             width: 100%
             height: 100%
+    .bg-desktop
+        display: block
+    .bg-tablet,
+    .bg-mobile
+        display: none
+
+@media all and (max-width: 1024px)
+    .section-wrap
+        .bg-desktop,
+        .bg-mobile
+            display: none
+        .bg-tablet
+            display: block
+@media all and (max-width: 480px)
+    .section-wrap
+        .bg-tablet,
+        .bg-desktop
+            display: none
+        .bg-mobile
+            display: block
